# Clarity-Engine-Finexio-Match

./: .env.example  .gitignore  .replit  Makefile  README.md  add-proper-trigram-indexes.sql  add-trigram-indexes.sql  cache-optimization-plan.json  check-bigquery-schema.js  check-bq-columns.mjs  check-bq-table-schema.ts  check-config.mjs  complete-batch.js  complete-batch.mjs  comprehensive-finexio-qa.mjs  comprehensive-parameter-fix.mjs  comprehensive-qa-test.mjs  comprehensive-system-test.mjs  comprehensive-test-report.json  create-400-test.csv  critical-optimizations.mjs  database-performance.mjs  display-finexio-success.mjs  emergency-memory-fix.mjs  enable-garbage-collection.mjs  extreme-stress-test.mjs  extreme-test-report.json  fast-bigquery-sync.ts  final-optimization-report.json  final-optimizations.mjs  final-proof.csv  final-qa-report.json  final-qa-report.mjs  final-test.csv  final-validation.mjs  fix-all-parsing-errors.mjs  fix-batch-167.mjs  fix-cache-performance.mjs  fix-finexio-batch.sql  fix-stuck-batch.js  (+57 more)
attached_assets/: Pasted-Absolutely-Here-s-a-single-copy-paste-build-spec-you-can-drop-into-Replit-s-AI-to-generate-the-a-1756575290986_1756575290986.txt  (+19 more)
client/: index.html
finexio-matcher/: README.md  load_test_data.py  main.py  pyproject.toml  start_and_test.sh  test_matcher.py  test_matching.py
finexio-matcher/app/: __init__.py  bigquery_sync.py  candidates.py  canonicalize.py  classifier.py  config.py  db.py  features.py  matching.py  schema.sql  utils.py
finexio-matcher/app/routers/: __init__.py  health.py  ingest.py  match.py  review.py
(+101 files in other folders)
