[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "fastapi>=0.116.1",
    "google-cloud-bigquery>=3.36.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "metaphone>=0.6",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "prometheus-client>=0.22.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14.0",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]
